--- a/public/checkingApply.ejs
+++ b/public/checkingApply.ejs
@@ -28,14 +28,9 @@
           <div class="row">
             <div class="col-sm-6">
               <label>학번:</label>
-              <input type="number" name="grade" id="userGrade" min="1" max="4" required/>
+              <input type="number" name="studentnumber" id="userStudentnumber" required/>
+              <button type="submit" class="btn btn--primary">지원확인</button>
             </div>
-
-            <div class="col-sm-6">
-              <label>학년:(1~4)</label>
-              <input type="number" name="grade" id="userGrade" min="1" max="4" required/>
-            </div>
-
           </div>
         </form>
       </div>
