--- a/public/info.ejs
+++ b/public/info.ejs
@@ -102,12 +102,15 @@
                 </div> -->
                 <img alt="logo-hor" class="logo-cu" src="/img/miro-logo_hor.png" style="position:center;" />
                 <br />
-                <div class="container-cu">
-                    <img alt="background" class="searchform-cu" src="/img/miro-searchform2.png" />
-                    <div class="word-cu">당신과 지나는 미로</div>
+                <div class="imagebg">
+                	<div class="background-image-holder">
+                		<img alt="background" src="/img/miro-searchform2.png" />
+                	</div>
+                  <div class="typed-headline">
+	                   <span class="h2 inline-block typed-text typed-text--cursor color--primary-cu" data-typed-strings="당신과 지나는 '美路'"></span>
+                  </div>
                 </div>
-              </div>
-            </div>
+
           </section>
           <section id="sector2">
             <!-- 미로의 소개: 로고, 소속, 위치, 연락처 등 -->
@@ -148,7 +151,7 @@
             <!-- 운영방식1: 모이는 날짜, 교육과정, 과제 -->
           </section>
           <section id="sector4">
-            <!-- 운영방식2: 팀구조(4인1조 1멘토 1디자이너 -->
+            <!-- 운영방식2: 팀구조(4인1조 1멘토 1디자이너) -->
             <div class="container">
               <div class="row">
                 <div class="col-sm-12">
@@ -186,141 +189,6 @@
                     </div>
                     <!--end of row-->
                 </div>
-                <!--end of container-->
-            </section>
-            <section class="switchable feature-large">
-              <div id="node">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <img alt="Image" src="img/Nodejs.png" />
-                        </div>
-                        <div class="col-sm-6 col-md-5">
-                            <div class="switchable__text">
-                                <h2>NODE</h2>
-                                <p class="lead">
-                                    Launching an attractive and scalable website quickly and affordably is important for modern startups &mdash; Stack offers massive value without looking 'bargain-bin'.
-                                </p>
-                                <a href="#">Learn More &raquo;</a>
-                            </div>
-                        </div>
-                    </div>
-                    <!--end of row-->
-                </div>
-              </div>
-                <!--end of container-->
-            </section>
-            <section class="switchable switchable--switch feature-large">
-              <div id="python">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <img alt="Image" src="img/Python.png" />
-                        </div>
-                        <div class="col-sm-6 col-md-5 col-md-offset-1">
-                            <div class="switchable__text">
-                                <h2>Python
-                                    <br class="hidden-xs hidden-sm" /></h2>
-                                <p class="lead">
-                                    Launching an attractive and scalable website quickly and affordably is important for modern startups &mdash; Stack offers massive value without looking 'bargain-bin'.
-                                </p>
-                                <a href="#">Learn More &raquo;</a>
-                            </div>
-                        </div>
-                    </div>
-                    <!--end of row-->
-                </div>
-              </div>
-                <!--end of container-->
-            </section>
-            <section class="switchable feature-large">
-              <div id="react">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <img alt="Image" src="img/React.png" />
-                        </div>
-                        <div class="col-sm-6 col-md-5">
-                            <div class="switchable__text">
-                                <h2>React</h2>
-                                <p class="lead">
-                                    Launching an attractive and scalable website quickly and affordably is important for modern startups &mdash; Stack offers massive value without looking 'bargain-bin'.
-                                </p>
-                                <a href="#">Learn More &raquo;</a>
-                            </div>
-                        </div>
-                    </div>
-                    <!--end of row-->
-                </div>
-              </div>
-                <!--end of container-->
-            </section>
-            <section class="switchable switchable--switch feature-large">
-              <div id="reactNative">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <img alt="Image" src="img/ReactNative.png" />
-                        </div>
-                        <div class="col-sm-6 col-md-5 col-md-offset-1">
-                            <div class="switchable__text">
-                                <h2>ReactNative
-                                    <br class="hidden-xs hidden-sm" /></h2>
-                                <p class="lead">
-                                    Launching an attractive and scalable website quickly and affordably is important for modern startups &mdash; Stack offers massive value without looking 'bargain-bin'.
-                                </p>
-                                <a href="#">Learn More &raquo;</a>
-                            </div>
-                        </div>
-                    </div>
-                    <!--end of row-->
-                </div>
-              </div>
-                <!--end of container-->
-            </section>
-            <section class="switchable feature-large">
-              <div id="Redux">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <img alt="Image" src="img/Redux.png" />
-                        </div>
-                        <div class="col-sm-6 col-md-5">
-                            <div class="switchable__text">
-                                <h2>Redux</h2>
-                                <p class="lead">
-                                    Launching an attractive and scalable website quickly and affordably is important for modern startups &mdash; Stack offers massive value without looking 'bargain-bin'.
-                                </p>
-                                <a href="#">Learn More &raquo;</a>
-                            </div>
-                        </div>
-                    </div>
-                    <!--end of row-->
-                </div>
-              </div>
-                <!--end of container-->
-            </section>
-            <section class="switchable switchable--switch feature-large">
-              <div id="tensorFlow">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <img alt="Image" src="img/Tensorflow.png" />
-                        </div>
-                        <div class="col-sm-6 col-md-5 col-md-offset-1">
-                            <div class="switchable__text">
-                                <h2>TensorFlow
-                                    <br class="hidden-xs hidden-sm" /></h2>
-                                <p class="lead">
-                                    Launching an attractive and scalable website quickly and affordably is important for modern startups &mdash; Stack offers massive value without looking 'bargain-bin'.
-                                </p>
-                                <a href="#">Learn More &raquo;</a>
-                            </div>
-                        </div>
-                    </div>
-                    <!--end of row-->
-                </div>
-              </div>
                 <!--end of container-->
             </section>
             <section class="text-center bg--secondary">
@@ -444,7 +312,7 @@
                                           <input type="number" name="studentnumber" id="userStudentnumber" required/>
                                       </div>
                                       <div class="col-sm-6">
-                                          <label>전화번호(010없이 작성해주세요.)</label>
+                                          <label>전화번호(010없이 작성해주세요)</label>
                                           <input type="number" name="phonenumber" id="userPhonenumber" required/>
                                       </div>
                                       <div class="col-sm-12">
@@ -481,32 +349,32 @@
                             <ul class="slides flickity-enabled is-draggable" tabindex="0">
                               <div class="flickity-viewport"><div class="flickity-slider" style="left: 0px; transform: translate3d(-133.32%, 0px, 0px);">
                                   <li class="col-sm-4 col-xs-6 slide" style="position: absolute;">
-                                    <a href="#tensorFlow">
+                                    <a href="https://www.tensorflow.org/">
                                         <img alt="tensorflow" src="img/Tensorflow.png">
                                     </a>
                                   </li>
                                   <li class="col-sm-4 col-xs-6 slide" style="position: absolute;">
-                                    <a href="#node" >
+                                    <a href="https://nodejs.org/ko/" >
                                         <img alt="nodejs" src="img/Nodejs.png">
                                     </a>
                                   </li>
                                   <li class="col-sm-4 col-xs-6 slide" style="position: absolute;">
-                                    <a href="#python" >
+                                    <a href="https://www.python.org/" >
                                         <img alt="python" src="img/Python.png">
                                     </a>
                                   </li>
                                   <li class="col-sm-4 col-xs-6 slide" style="position: absolute;">
-                                    <a href="#react" >
+                                    <a href="https://reactjs.org/" >
                                         <img alt="react" src="img/React.png">
                                     </a>
                                   </li>
                                   <li class="col-sm-4 col-xs-6 slide" style="position: absolute;">
-                                    <a href="#reactNative" >
+                                    <a href="https://facebook.github.io/react-native/" >
                                         <img alt="reactnative" src="img/ReactNative.png">
                                     </a>
                                   </li>
                                   <li class="col-sm-4 col-xs-6 slide" style="position: absolute;">
-                                    <a href="#Redux" >
+                                    <a href="https://redux.js.org/" >
                                         <img alt="redux" src="img/Redux.png">
                                     </a>
                                   </li>
@@ -529,7 +397,7 @@
                         <div class="col-sm-12">
                             <img alt="Image" class="logo" src="/img/logomiro.png" />
                             <span class="type--fine-print">&copy;
-                                <span class="update-year"></span> MIRO2018</span>
+                                MIRO<span class="update-year"></span></span>
                         </div>
                     </div>
                     <!--end of row-->
