--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -136,3 +136,18 @@ input[type=number]::-webkit-outer-spin-button {
     color: black;
     font-size: 30px;
 }
+.myBtn {
+  display: none;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  outline: none;
+
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 10px;
+  max-height: 1.85714286em;
+  max-width: none;
+}
